fixed loading animation on mobile

--- a/pages/story/assets/css/main.css
+++ b/pages/story/assets/css/main.css
@@ -82,12 +82,12 @@ input, select, textarea {
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		width: 10rem;
-		height: 10rem;
-		margin: -5rem 0 0 -5rem;
+		width: 12rem;
+		height: 12rem;
+		margin: -6rem 0 0 -6rem;
 		background-position: center;
 		background-repeat: no-repeat;
-        line-height: 10rem;
+        line-height: 12rem;
 		opacity: 0;
     }
 
